fix iOS interface issue – select dropdowns were clipping text

--- a/app/modules/app/styles/main.less
+++ b/app/modules/app/styles/main.less
@@ -16,6 +16,11 @@ html, body {
     text-rendering: geometricPrecision;
 }
 
+select {
+    height: auto;
+    font-size: 1em; 
+}
+
 .navbar-fixed-top { 
     border-bottom: 1px solid @grayLighter;
     border-bottom: 1px solid rgba(100,100,100,0.1);
